# promptyour-ai

./: .env.example  .gitignore  API_VALIDATION_COMPLETE.md  AUTHENTICATION_SETUP.md  CLAUDE.md  Core Algorithm Architecture.md.rtf  EMAIL_VERIFICATION_GUIDE.md  ENHANCED_CHAT_DISPLAY.md  ENHANCED_CUSTOMIZATION.md  FINAL_VALIDATION_3_CHAT_TYPES.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  LM_STUDIO_GUIDE.md  Makefile  PRODUCTION_READINESS.md  PROJECT_GUIDE.md  PROVIDER_VERIFICATION_RESULTS.md  QUESTION_PROMPT_FIX.md  README.md  RELEASE_v1.0.0_SUMMARY.md  alembic.ini  api_chat_types_analysis.md  docker-compose.yml  openrouter_models_analysis.json  pyproject.toml  requirements.txt  run_chat.sh  setup.py  terminal_chat.py  test_3_chat_types.py  test_new_command_demo.py
config/: README.md  audiences.yaml  evaluation_config.yaml  models.yaml  response_styles.yaml  themes.yaml
evaluations/: run_evaluations.py
scripts/: analyze_openrouter_models.py  update_model_pricing.py
src/backend/: Dockerfile  main.py
src/backend/alembic/: env.py
src/backend/app/: main.py
src/backend/app/core/: config.py  config_loader.py  config_manager.py  logging.py
src/backend/app/db/: database.py
src/backend/app/integrations/: __init__.py  lm_studio_provider.py  openrouter_provider.py  unified_llm_provider.py
src/backend/app/models/: analytics.py  conversation.py  model_evaluation.py  schemas.py  user.py
src/backend/app/services/: chat_service.py  evaluation_scheduler.py  input_processor.py  input_processor_v2.py  model_evaluation_scanner.py  model_selector.py  model_selector_v2.py  prompt_generator.py
src/backend/app/templates/: quick_response_prompt.j2
src/frontend/: app.py
src/mobile-frontend/: .env.example  App.tsx  IMPLEMENTATION.md  README.md  app.json  package.json
src/mobile-frontend/hooks/: useChat.ts
src/mobile-frontend/services/: api.ts  storage.ts  websocket.ts
src/mobile-frontend/store/: chatStore.ts  configStore.ts  userStore.ts
src/mobile-frontend/types/: api.ts
src/shared/: index.ts  package.json  tsconfig.json
src/shared/api/: client.ts  index.ts  websocket.ts
src/shared/types/: api.ts  constants.ts  index.ts
src/shared/utils/: conversation.ts  index.ts  providers.ts
src/web-frontend/: .env.example  README.md  SENTRY_SETUP.md  middleware.ts  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json
src/web-frontend/config/: rate-limits.yaml
src/web-frontend/migrations/: 001_create_user_profiles.sql  002_add_usage_functions.sql  003_create_usage_tracking.sql  README.md
src/web-frontend/scripts/: generate-config.js
src/web-frontend/src/: middleware.ts
tests/: README.md  conftest.py
tests/docs/: TERMINAL_CHAT_GUIDE.md
tests/e2e/: test_api.py  test_evaluation_system.py
tests/integration/backend/: test_lm_studio_chat.py  test_lm_studio_integration.py  test_openrouter_integration.py  test_websocket_chat.py
tests/unit/: test_terminal_chat.py
tests/unit/backend/: test_redesigned_input.py
(+75 files in other folders)
